# ps-vocode

./: .gitignore  README.md  pyproject.toml  setup.py
vocode/: helpers.py
vocode/streaming/: streaming_conversation.py
vocode/streaming/action/: base_action.py  factory.py  utils.py
vocode/streaming/agent/: __init__.py  anthropic_agent.py  base_agent.py  chat_gpt_agent.py  information_retrieval_agent.py  llm_agent.py  restful_user_implemented_agent.py  utils.py  websocket_user_implemented_agent.py
vocode/streaming/input_device/: microphone_input.py
vocode/streaming/models/: model.py  synthesizer.py  transcriber.py  websocket.py
vocode/streaming/output_device/: blocking_speaker_output.py  speaker_output.py  twilio_output_device.py  vonage_output_device.py
vocode/streaming/synthesizer/: __init__.py  base_synthesizer.py  eleven_labs_synthesizer.py  factory.py  miniaudio_worker.py
vocode/streaming/telephony/client/: twilio_client.py  vonage_client.py
vocode/streaming/transcriber/: assembly_ai_transcriber.py  azure_transcriber.py  deepgram_transcriber.py  rev_ai_transcriber.py
vocode/streaming/utils/: conversation_logger_adapter.py  goodbye_model.py  worker.py
vocode/streaming/vector_db/: base_vector_db.py
vocode/turn_based/agent/: __init__.py  chat_gpt_agent.py
vocode/turn_based/input_device/: microphone_input.py
vocode/turn_based/output_device/: speaker_output.py
vocode/turn_based/synthesizer/: __init__.py  eleven_labs_synthesizer.py
vocode/turn_based/transcriber/: sr_transcriber.py  whisper_transcriber.py
vocode/utils/whisper_cpp/: helpers.py
(+4 files in other folders)
