[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vocode"
version = "0.1.0"
authors = [
  { name="Jatin Jangir", email="jatinjangir24@gmail.com" },
]
description = "Vocode Fork for PerfectSprout Ussage."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Perfectsprout/ps-vocode"